venue and venue-list page setup

--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -2,18 +2,12 @@
 <body>
   <div class="content">
     <div class="header">
-      <h2>Venue:</h2>
-      <a href='/signup'>Sign up</a>
+      <h2><%=venue%> Venue:</h2>
+
     </div>
 
-    <form action="/login" method="POST">
-      <input type="text" name="username" placeholder="username">
-      <input type="text" name="password" placeholder="password">
-      <input type="submit" value="submit">
-    </form>
 
-      <div class='message'><%= message %></div>
-
+<a href="/venue-list">venue list</a>
     </div>
 </body>
 </html>
