--- a/views/venue-list.ejs
+++ b/views/venue-list.ejs
@@ -6,7 +6,7 @@
     </div>
       <!-- LIST OF VENUES -->
       <% for(var i=0; i<venues.length; i++) {%>
-        <h3><a href=''><%= venues[i].name %></a></h3>
+        <h3><a href='venue/?venue=<%= venues[i].name %>'><%= venues[i].name %></a></h3>
       <% } %>
     </div>
 </body>
