get artist albums object

--- a/views/venue.ejs
+++ b/views/venue.ejs
@@ -2,8 +2,8 @@
 <body>
   <div class="content">
     <div class="header">
-      <h2><%=venue%> Venue:</h2>
-
+      <h2><%=sendData.venue%> Venue:</h2>
+<br><h2> Data:<%=sendData.data.items[0].album_group%></h2>
     </div>
 
 
