before clean up

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
 <body>
   <div class="content">
     <div class="header">
-      <h2>Log in:</h2>
+      <h2>Venue Log in:</h2>
       <a href='/signup'>Sign up</a>
     </div>
 
