--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,18 @@
   <div class="content">
     <div class="header">
       <h2>Venue Log in:</h2>
-      <a href='/signup'>Sign up</a>
     </div>
-
-    <form action="/login" method="POST">
-      <input type="text" name="username" placeholder="username">
-      <input type="text" name="password" placeholder="password">
-      <input type="submit" value="submit">
-    </form>
-
-      <div class='message'><%= message %></div>
-
+    <div class="form">
+      <form action="/login" method="POST">
+        <input type="text" name="username" placeholder="username">
+        <input type="text" name="password" placeholder="password">
+        <input type="submit" value="submit">
+      </form>
     </div>
+    <div class='message'><%= message %></div>
+    <div class='member'>
+      Not a member? <a href='/signup'>Sign up</a>
+    </div>
+  </div>
 </body>
 </html>
