--- a/views/spotify-login.ejs
+++ b/views/spotify-login.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html>
   <head>
     <title>Example of the Authorization Code flow with Spotify</title>
@@ -14,13 +14,12 @@
         width: 500px;
       }
     </style>
-  </head>
-
+  </head> -->
+<% include ../partials/header %>
   <body>
-    <div class="container">
+    <div class="content">
       <div id="login">
-        <h1>This is an example of the Authorization Code flow</h1>
-        <a href="/spotify-login" class="btn btn-primary">Log in with Spotify</a>
+        <a href="/spotify-login" class="btn">Log in with Spotify</a>
       </div>
       <div id="loggedin">
         <div id="user-profile">
