--- a/views/venue-list.ejs
+++ b/views/venue-list.ejs
@@ -2,9 +2,9 @@
 <body>
   <div class="content">
     <div class="header">
-      <h2>Venue:</h2>
+      <h2>Venues</h2>
     </div>
-    
+
       <!-- LIST OF VENUES -->
       <% for(var i=0; i<venues.length; i++) {%>
         <h3><a href='venue/?venue=<%= venues[i].name %>'><%= venues[i].name %></a></h3>
